--- a/templates/home.html
+++ b/templates/home.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wellcome Image-Proccessing</title>
+    <link href="{% static 'images/Processing-Logo.png' %}" rel="icons" type="image/image-icon" />
     <link rel="stylesheet" href="{% static 'style.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -69,22 +70,34 @@
 <div class="d-flex justify-content-center align-items-center" style="width: 100%;">
   <div class="card card-fat m-4 p-4" style="width: 40%;">
     <img id="image-preview" src="#" class="show-image">
-    <form action="" method="post" enctype="multipart/form-data">
+    <form action="" class="container d-flex justify-content-center align-items-center" method="post" enctype="multipart/form-data">
       {% csrf_token %}
-      <input type="file" name="file" id="file" class="form-control mb-3" accept=".png, .jpg, .pdf" required>
+      <div>
+      <label for="fileInput">
+        <svg xmlns="http://www.w3.org/2000/svg" height="48px" viewBox="0 -960 960 960" width="48px" fill="#400707"><path d="M450-313v-371L330-564l-43-43 193-193 193 193-43 43-120-120v371h-60ZM220-160q-24 0-42-18t-18-42v-143h60v143h520v-143h60v143q0 24-18 42t-42 18H220Z"/></svg>
+
+      </label>
+      <input type="file" name="file" id="fileInput" class="mb-3" accept=".png, .jpg, .pdf" hidden required>
       <input type="hidden" name="url" id="url">
-      <button type="submit" onclick="upload()" class="btn btn-primary form-control">Submit</button>
+    </div>
+      <button type="submit" onclick="upload()" class="btn btn-primary">Submit</button>
     </form>
   </div>
 </div>
 {% endif %}
-{% comment %} 
-{% for images in img  %}
+
+{% for heading, section_text in text.items %}
+  <h1>{{heading}}</h1>
+  {{section_text}} <br>
+ <hr>
+{% endfor %}
+
+{% comment %} {% for images in img  %}
   <div>
     <img src="{{images.image.url}}" width="100" alt="image">
   </div>
-{% endfor %} 
-{% endcomment %}
+{% endfor %}  {% endcomment %}
+
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <script src="{% static 'script.js' %}"></script>
